# albus

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/albus/: Cargo.toml
crates/albus-tui/: Cargo.toml
crates/albus-tui/src/: app.rs  clock.rs  device_binding.rs  error.rs  lib.rs  main.rs  private_fs.rs  process_hardening.rs  remembered_path.rs  runtime.rs  sensitive_text.rs  trust_anchor.rs  ui.rs
crates/albus-tui/tests/: cli.rs  flow.rs
crates/albus/src/: lib.rs
crates/albus/src/backup/: error.rs  format.rs  mod.rs  repository.rs
crates/albus/src/core/: error.rs  mod.rs  model.rs  otpauth.rs  totp.rs
crates/albus/src/crypto/: config.rs  envelope.rs  error.rs  mod.rs  passphrase.rs  primitives.rs  secret.rs
crates/albus/src/storage/: error.rs  format.rs  mod.rs  privacy.rs  repository.rs
crates/albus/tests/: backup_repository.rs  core_parsing.rs  core_properties.rs  core_rfc_vectors.rs  storage_vault.rs
docs/: roadmap.md  specs.md
