[workspace]
members = [
    "crates/albus",
    "crates/albus-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0-rc.1"
edition = "2024"
rust-version = "1.94"
license = "AGPL-3.0-only"
repository = "https://github.com/oqullcan/albus"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "debuginfo"
