[package]
name = "albus-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
[lib]
path = "src/lib.rs"

[[bin]]
name = "albus"
path = "src/main.rs"
doc = false

[dependencies]
albus = { path = "../albus" }
crossterm = "0.29.0"
data-encoding = "2.9.0"
directories = "=5.0.1"
keyring-core = "0.7.2"
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.14"
thiserror = "2.0"
time = { version = "0.3.47", features = ["formatting"] }
uuid = { version = "=1.11.0", features = ["v4"] }
zeroize = "1.8"

[lints]
workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service-keyring-store = { version = "0.3.3", features = ["crypto-rust", "vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "0.2.2", features = ["keychain", "protected"] }

[target.'cfg(windows)'.dependencies]
windows-dpapi = "0.2.0"
