[package]
name = "albus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
argon2 = "0.5"
chacha20poly1305 = "0.10"
data-encoding = "2.6"
getrandom = "0.2"
hmac = "0.12"
percent-encoding = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
tempfile = "3.14"
thiserror = "2.0"
time = { version = "0.3.47", features = ["formatting"] }
url = "2.5"
zeroize = "1.8"

[lints]
workspace = true
